<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
android:layout_gravity="center"
android:background="@android:color/transparent"
android:layout_height="wrap_content"
android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="3dp">

            <LinearLayout
                android:id="@+id/first_layer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/choose"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/buttons_holder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:minWidth="250dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvCamera"
                        style="@style/option"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:drawableLeft="@drawable/camera"
                        android:drawablePadding="10dp"
                        android:clickable="true"
                        android:gravity="left|center_vertical"
                        android:text="@string/camera" />

                    <TextView
                        android:id="@+id/tvGallery"
                        style="@style/option"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:clickable="true"
                        android:drawableLeft="@drawable/gallery"
                        android:drawablePadding="10dp"
                        android:gravity="left|center_vertical"
                        android:text="@string/gallery" />

                </LinearLayout>

                <TextView
                    android:layout_marginTop="10dp"
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_gray"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>